--- a/210218-2.md
+++ b/210218-2.md
@@ -10,10 +10,12 @@
     <li>.create, .update 등등의 데이터를 처리할때 .create! 를 붙이면 에러를 확인할 수 있음
     </li>
     <li>binding.pry : debug할 때 사용</li>
+    <li>ModelName.last : 마지막으로 추가한 디비 내용 확인</li>
 </ul>
 
 <b>Terminal</b>
 <ul>
     <li>gcm</li>
     <li>glum</li>
+    <li>gb</li>
 </ul>
