--- a/5Week/210318.md
+++ b/5Week/210318.md
@@ -6,7 +6,7 @@
   dio.FormData formData = dio.FormData.fromMap({'career': body});                    
  ```
 - dio.fromMap을 할때 rails의 require(:모델명)으로 매핑해서 보냄
-- create만 할 경우 responsed를 해주지 않아도됨
+- create만 할 경우 response를 해주지 않아도됨
 
 <b>Ruby on Rails</b>
 - image를 넣어야할때 model파일에 넣는 명령어
