--- a/5Week/210319.md
+++ b/5Week/210319.md
@@ -18,4 +18,7 @@
  ```
 - 수정 path는 앞에 edit을 붙여야함
 
-
+```ruby
+   <td><%= career.icon&.attachment&.url %></td>
+ ```
+ - local에서 올린파일(active storage)를 이용할때 url 형식으로 보이게 처리
