--- a/10Week/210419.md
+++ b/10Week/210419.md
@@ -12,3 +12,16 @@
       : '${NumberFormat().format(application.totalPrice - application.totalPrice * coupon.discountRate / 100)}'
   : '${NumberFormat().format(application.totalPrice)}원',
  ```
+
+<b>Ruby on Rails</b>
+
+- method는 따로 라우팅을 빼줄 필요 없음
+- self는 rails의 클래스명을 지칭함(this같은 느낌)
+- rails는 삼항 연산자 대신 if else end를 많이 씀
+``` ruby
+   if coupon&.discount_rate.nil?
+      discount_price = coupon&.price
+    else
+      discount_price = (before_coupon * coupon&.discount_rate / 100).to_i
+    end
+ ```
